--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <header>
+    <header class="container">
+        <!--  navbar  -->
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
@@ -38,8 +39,151 @@
               </div>
             </div>
           </nav>
+          <!-- slider starts -->
+          <section class="mt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item p-5 border rounded bg-info active">
+                  <div class="row">
+                    <div class="col-lg-7  d-flex align-items-center">
+                     <div>
+                      <h1>Coold Dude Headphone</h1>
+                      <p>Thi is the best in the world for people who just want to waste time in front of funky world.</p>
+                      <h1>$420</h1>
+                      <div class="btn btn-primary">Buy Now</div>
+                     </div>
+                    </div>
+                    <div class="col-lg-5">
+                      <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  </div>
+                  <div class="carousel-item p-5 border rounded bg-info active">
+                    <div class="row">
+                      <div class="col-lg-7  d-flex align-items-center">
+                       <div>
+                        <h1>Mega Tv LCD for Sports</h1>
+                        <p>Thi is the best in the world for people who just want to waste time in front of funky world.</p>
+                        <h1>$1200</h1>
+                        <div class="btn btn-primary">Buy Now</div>
+                       </div>
+                      </div>
+                      <div class="col-lg-5">
+                        <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    </div>
+                    <div class="carousel-item p-5 border rounded bg-info active">
+                      <div class="row">
+                        <div class="col-lg-7  d-flex align-items-center">
+                         <div>
+                          <h1>X-box for your living room</h1>
+                          <p>Thi is the best in the world for people who just want to waste time in front of funky world.</p>
+                          <h1>$600</h1>
+                          <div class="btn btn-primary">Buy Now</div>
+                         </div>
+                        </div>
+                        <div class="col-lg-5">
+                          <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+          </section>
+          <!-- slider ends -->
     </header>
 
+    <!-- Main -->
+    <main>
+      <!-- catagories start -->
+      <section>
+        <div class="container text-center my-5">
+          <div class="row g-5">
+            <!-- single catagory -->
+            <div class="col-lg-4 col-md-4 col-sm-12">
+              <div class="p-3 border bg-warning d-flex justify-content-around rounded-3 align-items-center">
+                <h1 class="text-white">
+                  Watch
+                </h1>
+                <img src="images/categories/watch.png" alt="">
+              </div>
+            </div>
+            <!-- single catagory -->
+            <div class="col-lg-4 col-md-4 col-sm-12">
+              <div class="p-3 border bg-warning d-flex justify-content-around rounded-3 align-items-center">
+                <h1 class="text-white">
+                  Bag
+                </h1>
+                <img src="images/categories/bag.png" alt="">
+              </div>
+            </div>
+              <!-- single catagory -->
+            <div class="col-lg-4 col-md-4 col-sm-12">
+              <div class="p-3 border bg-warning d-flex justify-content-around rounded-3 align-items-center">
+                <h1 class="text-white">
+                  Shoes
+                </h1>
+                <img src="images/categories/shoes.png" alt="">
+              </div>
+          </div>
+
+           
+        </div>
+      </section>
+      <!-- catagories end -->
+
+      <!-- shoes section starts -->
+      <section class="container my-5">
+        <h2>Shoes</h2>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="m-3">
+                <div class="btn btn-warning">Buy Now</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 300</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+              <div class="m-3">
+                <div class="btn btn-warning">Buy Now</div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 border border-0 shadow-lg">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+              <div class="m-3">
+                <div class="btn btn-warning">Buy Now</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
 
 <!-- JS Link -->
