--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Panda Commerce</title>
     <!-- Bootstrap CSS Link -->
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- css link -->
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
     <header class="container">
         <!--  navbar  -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg bg-light">
             <div class="container">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -25,15 +27,15 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">Shoes</a>
+                    <a class="nav-link active" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item active">
-                    <a class="nav-link active" href="#" >
+                    <a class="nav-link active" href="#backpack" >
                       Backpack
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active">Subscribe</a>
+                    <a class="nav-link active" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -43,7 +45,7 @@
           <section class="mt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item p-5 border rounded bg-info active">
+                  <div class="carousel-item p-5 border rounded panda-bg-info active">
                   <div class="row">
                     <div class="col-lg-7  d-flex align-items-center">
                      <div>
@@ -58,7 +60,7 @@
                     </div>
                   </div>
                   </div>
-                  <div class="carousel-item p-5 border rounded bg-info active">
+                  <div class="carousel-item p-5 border rounded panda-bg-info active">
                     <div class="row">
                       <div class="col-lg-7  d-flex align-items-center">
                        <div>
@@ -73,7 +75,7 @@
                       </div>
                     </div>
                     </div>
-                    <div class="carousel-item p-5 border rounded bg-info active">
+                    <div class="carousel-item p-5 border rounded panda-bg-info active">
                       <div class="row">
                         <div class="col-lg-7  d-flex align-items-center">
                          <div>
@@ -142,7 +144,7 @@
       <!-- catagories end -->
 
       <!-- shoes section starts -->
-      <section class="container my-5">
+      <section id="shoes" class="container my-5">
         <h2>Shoes</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
@@ -188,7 +190,7 @@
       </section>
 
       <!-- backpack starts -->
-      <section class="container my-5">
+      <section id="backpack" class="container my-5">
         <h2>Bckpack</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           <div class="col">
@@ -232,7 +234,24 @@
           </div>
         </div>
       </section>
+      <!-- subscriber area -->
+      <section id="subscribe" style="height: 300px;" class="container panda-bg-info rounded-3 d-flex justify-content-center align-items-center">
+        <div>
+          <h2>LET'S STAY IN TOUCH</h2>
+        <p>Get updates on sales, specials and more</p>
+        <form>
+          <div class="mb-1">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        </div>
+      </section>
     </main>
+
+    <footer class="mt-5">
+      <p class="text-center"><small>©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
 
 
 <!-- JS Link -->
